[package]
name = "pocket_telegram_bot"
version = "0.1.0"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-error = "2.0.0"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
dotenv = "0.15.0"
derive_more = "0.99.13"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
cow_arc = "0.2.2"
reqwest_inspect_json = "0.0.7"
tokio = {version = "1.4.0", features = ["full"]}
reqwest = {version = "0.11.2", features = ["json", "rustls-tls"]}