[package]
name = "pocket_telegram_bot"
version = "0.1.0"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-error = "2.0.0"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
tracing-futures = "0.2.5"
dotenv = "0.15.0"
derive_more = "0.99.13"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
cow_arc = "0.2.2"
reqwest_inspect_json = "0.0.7"
bb8 = "0.7.0"
bb8-redis = "0.9.0"
futures = "0.3.14"
url = "2.2.1"
redis = {version = "0.20.0", features = ["aio", "tokio-comp"]}
tokio = {version = "1.4.0", features = ["full"]}
reqwest = {version = "0.11.2", features = ["json", "rustls-tls"]}
pocket_api_client = {git = "https://github.com/DevNulPavel/pocket_api_client", rev = "7f4e3802a85b3c6949b2ab143cd7de52fae0635f"}
# num_enum = "0.5.1"
# deadpool-redis = "0.7.1"
# deadpool = "0.7.0"
# actix = "0.11.1"
